@@ -4,6 +4,7 @@
 * Added handling of OPTINS method to support CORS requests.
 * Changed the behaviour of 'Access-Control-Allow-Origin' response header: it 
 will be added with a value of '*' only if not set by the endpoint.   
+* Added /Health endpoint for load balancer checks. 
 
 June 4, 2014 - Version 1.0
 ==========================
